[package]
name = "rsass"
version = "0.1.0"
authors = ["Mordecai Malignatus <mordecai@malignat.us>"]
edition = "2018"

[dependencies]
rss = { version = "1.9.0", features = ["serde"] }
web-view = "0.6.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4.2"
quick-xml = "0.18.1"
reqwest = "0.10.4"
futures = "0.3"
tokio = "0.2"
chrono = "0.4.11"
clap = "~2.33"
rusqlite = { version = "0.23.1", features = ["bundled"] }
uuid = { version = "0.8.1", features = ["v4"] }